feat(swagger): 增加增删改查传递的默认值,测试方便
